2001-10-31  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.6

	* src/yppoll.c: Include time.h, use time_t for order variable
	* src/yppasswd.c: Include time.h, don't compare old password
	  if passwd.adjunct map is used

	* configure.in: Add malloc debug options for dmalloc and efence

2000-10-30  Thorsten Kukuk  <kukuk@suse.de>

	* Update to gettext 0.10.40
	* Update to automake 1.5
	* Update to autoconf 2.52

2000-05-21  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Usr /usr/share/man if prefix = /usr.
	  libexecdir is /usr/lib/yp

	* src/yppasswd.c(getnismaster): print name of NIS master.

2001-03-11  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.5

	* src/domainname.c (print_error): Add missing argument to printf.

	* src/yppasswd.c (main): Use strncpy.
	  Dont't use the same buffer for old and new gecos value.

	* intl: Update to gettext 0.10.35

1999-12-07  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c: Fix size of static buffers.
	  Add patch from Lars R. Clausen <lrclause@www1.tam.uiuc.edu>
	  to make chsh and chfn work.

1999-11-21  Thorsten Kukuk  <kukuk@suse.de>

	* lib/nicknames.c: Don't include malloc.h.

1999-10-22  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.4

	* src/ypwhich.c: Don't include malloc.h.
	* src/yppasswd.c: Likewise.

1999-10-18  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c (main): Don't print success if we have printed
	  an error message earlier.

1999-07-30  Thorsten Kukuk  <kukuk@suse.de>

	* etc/nicknames: Change hosts alias to hosts.byname.

1999-06-29  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c: Add defines for no glibc systems.

	* src/ypmatch.c: Include more header files for Solaris

	* configure.in: check for rpc/clnt_soc.h
	* src/ypwhich.c: add rpc headers

	* lib/getline.c: Include getline.h
	* intl/libgettext.h: Fix some #if
	  Patches from Peter Breitenlohner <peb@mppmu.mpg.de>

1999-05-18  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.3
