@@ -3,7 +3,7 @@
 #
 # Author: Thorsten Kukuk <kukuk@suse.de>
 #
-AUTOMAKE_OPTIONS = 1.4 gnits
+AUTOMAKE_OPTIONS = 1.5 gnits dist-bzip2
 MAINT_CHARSET = latin1
 #
 SUBDIRS = intl lib src po man etc
