@@ -6,6 +6,8 @@ Please send bug reports, questions and suggestions to <kukuk@suse.de>.
 
 Version 2.6
 * Update to new automake, autoconf and gettext
+* Fix compiler warnings
+* Minor bug fixes for IA64
 
 Version 2.5
 * Bug fixes for wrong buffer handling
