@@ -1,3 +1,7 @@
+2001-10-31  Thorsten Kukuk  <kukuk@suse.de>
+
+	* de.po: Adjust translation for new format strings
+
 2001-10-30  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.40.
